# AarogyamAI

./: .eslintrc.json  .gitignore  .lintstagedrc.json  .prettierignore  README.md  debug-vitals.sql  design.md  package-lock.json  package.json  requirements.md  test-api.sh  test-vitals.sql  vercel.json
clinical-ai/: Makefile  main.py  pyproject.toml
clinical-ai/agent_worker/: config.py  main.py  pyproject.toml
clinical-ai/agent_worker/agent/: agent_loop.py  context.py
clinical-ai/api/: config.py  dependencies.py  main.py  pyproject.toml
clinical-ai/api/middleware/: audit_logger.py  auth.py  consent.py  input_validator.py  rbac.py
clinical-ai/api/routes/: admin.py  auth.py  consent.py  doctor.py  intake.py  nurse.py  patient.py
clinical-ai/api/services/: admin_service.py  auth_service.py  consent_service.py  doctor_service.py  intake_assistant.py  intake_orchestrator.py  nurse_service.py  patient_service.py  realtime_transcriber.py  rights_service.py  voice_providers.py
clinical-ai/frontend/: package-lock.json  package.json
clinical-ai/frontend/src/app/: layout.tsx
clinical-ai/infrastructure/alembic/: env.py
clinical-ai/scripts/: clinic_demo.py  generate_dev_token.py  observability_check.py  production_readiness.md  run_prototype_flow.py  seed_clinic.py  test_fallback_path.py
clinical-ai/tests/: conftest.py
clinical-ai/tests/integration/: test_audit_chain.py  test_auth_flow.py  test_consent_flow.py  test_nurse_flow.py  test_patient_session_flow.py  test_rights_flow.py  test_security.py
clinical-ai/tests/unit/: test_agent_loop.py  test_audit_service.py  test_consent_validator.py  test_intake_assistant_conversation.py  test_output_filter.py  test_pii_stripper.py  test_vitals_validator.py
(+47 files in other folders)
